--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
   --tertiary-bg: #153349;
   /* --light-bg: #c7eec0; */
   --primary-text: #ede6ce;
-  --secondary-text: #36342e;
+  --secondary-text: #f0c1ad;
   --accent-col: #cb6639;
   --link-standard: #6589bd;
   --link-visited: #9165bd;
@@ -21,6 +21,11 @@ header {
 }
 footer {
   border-top: 4px solid var(--accent-col);
+  /* position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding: 10px 0;
+  margin: 0; */
 }
 
 /* ---------- BODY ---------- */
@@ -51,6 +56,10 @@ li {
 }
 
 /* ---------- CUSTOM CLASSES ---------- */
+
+.bar {
+  width: 80%;
+}
 
 .thick-hr {
   height: 4px;
