--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,8 @@
   --link-hover: #cb653a;
   --link-hover-visited: #dbc58f;
   /* realtime colors */
-  --text: #ede6cf;
+  --text: #f6e6b5;
+  --text2: #e3dfd1;
   --text_dark: #061428;
   --background: #030a14;
   --background-light: #06152b;
@@ -75,7 +76,7 @@ a:visited:hover {
 
 li {
   /* color: gray; */
-  color: var(--text, white);
+  color: var(--text2, white);
 }
 
 /* ---------- CUSTOM CLASSES ---------- */
