--- a/styles/style.css
+++ b/styles/style.css
@@ -86,6 +86,7 @@ li {
   justify-content: center; 
   padding-left: 12px;
   padding-right: 12px;
+  margin-top: 6px;
   text-decoration: none;
   border: none;
   text-align: center;
